# HomeTest

./: .env.sample  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: list_models.py  reset_all.py  run_local.py  test_openai_upload.py  test_scraper.py  test_zendesk.py
src/: config.py
src/jobs/: main.py
src/openai_service/: client.py  upload_markdown.py
src/scraper/: article_store.py  html_to_md.py  scrape_articles.py  zendesk_client.py
src/utils/: hashing.py  logger.py  slug.py  spaces.py  spaces_logger.py
